auto upgrade cert-manager

--- a/kubernetes/apps/cert-manager/subscription.yaml
+++ b/kubernetes/apps/cert-manager/subscription.yaml
@@ -10,5 +10,4 @@ spec:
   name: cert-manager 
   source: community-operators 
   sourceNamespace: openshift-marketplace 
-  installPlanApproval: Manual
-  startingCSV: cert-manager.v1.13.1
+  installPlanApproval: Automatic
