add secrets and certificates

--- a/kubernetes/apps/cert-manager/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/kustomization.yaml
@@ -5,3 +5,7 @@ kind: Kustomization
 resources:
   # Subscription
   - ./subscription.yaml
+  # Issuers
+  - ./issuers
+  # Certificates
+  - ./certificates
