--- a/kubernetes/apps/cert-manager/issuers/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/issuers/kustomization.yaml
@@ -3,6 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./flux.yaml
-  - ./cluster.yaml
-  - ./cluster-secrets.sops.yaml
+  - ./secret.yaml
+  - ./letsencrypt-production.yaml
+  - ./letsencrypt-staging.yaml
