--- a/kubernetes/apps/cert-manager/issuers/secret.yaml
+++ b/kubernetes/apps/cert-manager/issuers/secret.yaml
@@ -3,6 +3,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: route53-access-key
-  namespace: cert-manager
+  namespace: openshift-operators
 stringData:
   secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
