--- a/kubernetes/apps/media/data-volume.yaml
+++ b/kubernetes/apps/media/data-volume.yaml
@@ -1,18 +1,9 @@
 ---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: data-volume
-provisioner: nfs
-parameters:
-  archiveOnDelete: "false"
----
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: data-volume
 spec:
-  storageClassName: media
   capacity:
     storage: 1Mi # Size does not matter
   accessModes: ["ReadWriteMany"]
@@ -32,10 +23,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-volume
-  namespace: media
+  namespace: data
 spec:
   accessModes: ["ReadWriteMany"]
-  storageClassName: data-volume
+  storageClassName: ""
   resources:
     requests:
       storage: 1Mi # Size does not matter
