--- a/kubernetes/apps/synology-csi/controller.yaml
+++ b/kubernetes/apps/synology-csi/controller.yaml
@@ -3,6 +3,7 @@ kind: ServiceAccount
 metadata:
   name: csi-controller-sa
   namespace: synology-csi
+
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -90,7 +91,7 @@ spec:
             capabilities:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
-          image: k8s.gcr.io/sig-storage/csi-provisioner:v3.3.0
+          image: registry.k8s.io/sig-storage/csi-provisioner:v3.0.0
           args:
             - --timeout=60s
             - --csi-address=$(ADDRESS)
@@ -108,7 +109,7 @@ spec:
             capabilities:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
-          image: k8s.gcr.io/sig-storage/csi-attacher:v4.0.0
+          image: registry.k8s.io/sig-storage/csi-attacher:v3.3.0
           args:
             - --v=5
             - --csi-address=$(ADDRESS)
@@ -125,7 +126,7 @@ spec:
             capabilities:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
-          image: k8s.gcr.io/sig-storage/csi-resizer:v1.6.0
+          image: registry.k8s.io/sig-storage/csi-resizer:v1.3.0
           args:
             - --v=5
             - --csi-address=$(ADDRESS)
@@ -142,7 +143,7 @@ spec:
             capabilities:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
-          image: synology/synology-csi:v1.1.1
+          image: synology/synology-csi:v1.1.2
           args:
             - --nodeid=NotUsed
             - --endpoint=$(CSI_ENDPOINT)
