--- a/kubernetes/apps/media/data-volume.yaml
+++ b/kubernetes/apps/media/data-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: media
+  name: data
 provisioner: nfs
 parameters:
   archiveOnDelete: "false"
@@ -10,11 +10,11 @@ parameters:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: media
+  name: data
 spec:
-  storageClassName: media
+  storageClassName: data
   capacity:
-    storage: 1Mi # Size does not matter ...twss
+    storage: 1Mi
   accessModes: ["ReadWriteMany"]
   persistentVolumeReclaimPolicy: Retain
   nfs:
@@ -31,11 +31,11 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: media
+  name: data
   namespace: default
 spec:
   accessModes: ["ReadWriteMany"]
-  storageClassName: media
+  storageClassName: data
   resources:
     requests:
-      storage: 1Mi # Size does not matter ...twss
+      storage: 1Mi
