--- a/kubernetes/apps/media/data-volume.yaml
+++ b/kubernetes/apps/media/data-volume.yaml
@@ -1,18 +1,10 @@
 ---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: data
-provisioner: nfs
-parameters:
-  archiveOnDelete: "false"
----
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: data
+  name: data-volume
 spec:
-  storageClassName: data
+  storageClassName: ""
   capacity:
     storage: 1Mi
   accessModes: ["ReadWriteMany"]
@@ -31,11 +23,12 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data
+  name: data-volume
   namespace: default
 spec:
   accessModes: ["ReadWriteMany"]
-  storageClassName: data
   resources:
     requests:
       storage: 1Mi
+  volumeName: data-volume
+  storageClassName: ""
