--- a/kubernetes/apps/media/plex/helm-release.yaml
+++ b/kubernetes/apps/media/plex/helm-release.yaml
@@ -115,6 +115,8 @@ spec:
 
       transcode:
         enabled: true
+        accessMode: ["ReadWriteOnce"]
+        type: emptyDir
 
     defaultPodOptions:
     securityContext:
