--- a/kubernetes/apps/media/plex/helm-release.yaml
+++ b/kubernetes/apps/media/plex/helm-release.yaml
@@ -40,6 +40,9 @@ spec:
             env:
               TZ: ${TIMEZONE}
 
+    serviceAccount:
+      name: plex-sa
+
     service:
       main:
         type: LoadBalancer
