--- a/kubernetes/apps/media/data-volume.yaml
+++ b/kubernetes/apps/media/data-volume.yaml
@@ -24,7 +24,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-volume
-  namespace: default
+  namespace: media
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
