--- a/kubernetes/apps/cert-manager/certificates/apps.yaml
+++ b/kubernetes/apps/cert-manager/certificates/apps.yaml
@@ -16,4 +16,5 @@ spec:
     kind: ClusterIssuer
   commonName: apps.openshift.${SECRET_TLD}
   dnsNames: 
+    - "apps.openshift.${SECRET_TLD}"
     - "*.apps.openshift.${SECRET_TLD}"
