--- a/kubernetes/apps/cert-manager/certificates/apps.yaml
+++ b/kubernetes/apps/cert-manager/certificates/apps.yaml
@@ -2,12 +2,12 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: apps-wildcard-cert-tls
-  namespace: cert-manager
+  namespace: openshift-ingress
 spec:
   secretTemplate:
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: ""
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "openshift-ingress"
       reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
       reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: ""
   secretName: apps-wildcard-cert-tls
