--- a/kubernetes/apps/node-feature-discovery/kustomization.yaml
+++ b/kubernetes/apps/node-feature-discovery/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - scc.yaml
+  - rolebinding.yaml
   - github.com/kubernetes-sigs/node-feature-discovery/deployment/overlays/default-combined?ref=v0.14.2
 # patches:
 #   - patch: |
