--- a/kubernetes/apps/node-feature-discovery/subscription.yaml
+++ b/kubernetes/apps/node-feature-discovery/subscription.yaml
@@ -1,11 +1,11 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: nfd
+  name: openshift-nfd-operator
   namespace: openshift-nfd
 spec:
   channel: stable 
-  name: nfd 
+  name: openshift-nfd-operator
   source: community-operators 
   sourceNamespace: openshift-marketplace 
   installPlanApproval: Automatic
