--- a/cert-manager/certificates/kustomization.yaml
+++ b/cert-manager/certificates/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 resources:
   - ./api.yaml
   - ./apps.yaml
-  - ./patch-apps-ingress.yaml
+# Disabled until i know certs work
+#  - ./patch-apps-ingress.yaml
   
