--- a/kubernetes/apps/cert-manager/certificates/api.yaml
+++ b/kubernetes/apps/cert-manager/certificates/api.yaml
@@ -14,7 +14,7 @@ spec:
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: api.openshift.${SECRET_TLD}
+  commonName: api.openshift.$(SECRET_TLD)
   dnsNames: 
-    - "api.openshift.${SECRET_TLD}"
-    - "api-int.openshift.${SECRET_TLD}"
+    - "api.openshift.$(SECRET_TLD)"
+    - "api-int.openshift.$(SECRET_TLD)"
