--- a/kubernetes/apps/cert-manager/issuers/letsencrypt-staging.yaml
+++ b/kubernetes/apps/cert-manager/issuers/letsencrypt-staging.yaml
@@ -8,18 +8,18 @@ metadata:
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: ${SECRET_ADMIN_EMAIL}
+    email: $(SECRET_ADMIN_EMAIL)
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
     - selector:
         dnsZones:
-          - ${SECRET_TLD}
+          - $(SECRET_TLD)
       dns01:
         route53:
-          region: ${AWS_REGION}
-          hostedZoneID: ${AWS_HOSTED_ZONE_ID}
-          accessKeyID: ${AWS_ACCESS_KEY_ID}
+          region: $(AWS_REGION)
+          hostedZoneID: $(AWS_HOSTED_ZONE_ID)
+          accessKeyID: $(AWS_ACCESS_KEY_ID)
           secretAccessKeySecretRef:
             name: route53-access-key
             key: secretAccessKey
