--- a/kubernetes/apps/cert-manager/issuers/secret.yaml
+++ b/kubernetes/apps/cert-manager/issuers/secret.yaml
@@ -5,4 +5,4 @@ metadata:
   name: route53-access-key
   namespace: openshift-operators
 stringData:
-  secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
+  secretAccessKey: $(AWS_SECRET_ACCESS_KEY)
