--- a/cert-manager/issuers/secret.yaml
+++ b/cert-manager/issuers/secret.yaml
@@ -4,4 +4,4 @@ kind: Secret
 metadata:
   name: route53-access-key
 stringData:
-  secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
+  secretAccessKey: $(AWS_SECRET_ACCESS_KEY)
