--- a/cert-manager/kustomization.yaml
+++ b/cert-manager/kustomization.yaml
@@ -1,42 +1,172 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./issuers
-  - ./certificates
-vars:
-  - name: SECRET_TLD
-    objref:
-      kind: Secret
-      name: cert-manager-secrets
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.SECRET_TLD
-  - name: SECRET_ADMIN_EMAIL
-    objref:
-      kind: Secret
-      name: cert-manager-secrets
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.SECRET_ADMIN_EMAIL
-  - name: AWS_REGION
-    objref:
-      kind: Secret
-      name: cert-manager-secrets
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.AWS_REGION
-  - name: AWS_HOSTED_ZONE_ID
-    objref:
-      kind: Secret
-      name: cert-manager-secrets
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.
-  - name: AWS_ACCESS_KEY_ID
-    objref:
-      kind: Secret
-      name: cert-manager-secrets
-      apiVersion: v1
-    fieldref:
-      fieldpath: data.AWS_ACCESS_KEY_ID
+- ./issuers
+- ./certificates
+replacements:
+- source:
+    fieldPath: data.SECRET_TLD
+    kind: Secret
+    name: cert-manager-secrets
+    version: v1
+  targets:
+  - fieldPaths:
+    - spec.acme.solvers.0.selector.dnsZones.0
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-production
+      version: v1
+  - fieldPaths:
+    - spec.acme.solvers.0.selector.dnsZones.0
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-staging
+      version: v1
+  - fieldPaths:
+    - spec.commonName
+    options:
+      delimiter: .
+      index: 2
+    select:
+      group: cert-manager.io
+      kind: Certificate
+      name: api-cert-tls
+      namespace: openshift-config
+      version: v1
+  - fieldPaths:
+    - spec.dnsNames.0
+    options:
+      delimiter: .
+      index: 2
+    select:
+      group: cert-manager.io
+      kind: Certificate
+      name: api-cert-tls
+      namespace: openshift-config
+      version: v1
+  - fieldPaths:
+    - spec.dnsNames.1
+    options:
+      delimiter: .
+      index: 2
+    select:
+      group: cert-manager.io
+      kind: Certificate
+      name: api-cert-tls
+      namespace: openshift-config
+      version: v1
+  - fieldPaths:
+    - spec.commonName
+    options:
+      delimiter: .
+      index: 2
+    select:
+      group: cert-manager.io
+      kind: Certificate
+      name: apps-wildcard-cert-tls
+      namespace: openshift-ingress
+      version: v1
+  - fieldPaths:
+    - spec.dnsNames.0
+    options:
+      delimiter: .
+      index: 2
+    select:
+      group: cert-manager.io
+      kind: Certificate
+      name: apps-wildcard-cert-tls
+      namespace: openshift-ingress
+      version: v1
+  - fieldPaths:
+    - spec.dnsNames.1
+    options:
+      delimiter: .
+      index: 3
+    select:
+      group: cert-manager.io
+      kind: Certificate
+      name: apps-wildcard-cert-tls
+      namespace: openshift-ingress
+      version: v1
+- source:
+    fieldPath: data.SECRET_ADMIN_EMAIL
+    kind: Secret
+    name: cert-manager-secrets
+    version: v1
+  targets:
+  - fieldPaths:
+    - spec.acme.email
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-production
+      version: v1
+  - fieldPaths:
+    - spec.acme.email
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-staging
+      version: v1
+- source:
+    fieldPath: data.AWS_REGION
+    kind: Secret
+    name: cert-manager-secrets
+    version: v1
+  targets:
+  - fieldPaths:
+    - spec.acme.solvers.0.dns01.route53.region
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-production
+      version: v1
+  - fieldPaths:
+    - spec.acme.solvers.0.dns01.route53.region
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-staging
+      version: v1
+- source:
+    fieldPath: data.
+    kind: Secret
+    name: cert-manager-secrets
+    version: v1
+  targets:
+  - fieldPaths:
+    - spec.acme.solvers.0.dns01.route53.hostedZoneID
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-production
+      version: v1
+  - fieldPaths:
+    - spec.acme.solvers.0.dns01.route53.hostedZoneID
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-staging
+      version: v1
+- source:
+    fieldPath: data.AWS_ACCESS_KEY_ID
+    kind: Secret
+    name: cert-manager-secrets
+    version: v1
+  targets:
+  - fieldPaths:
+    - spec.acme.solvers.0.dns01.route53.accessKeyID
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-production
+      version: v1
+  - fieldPaths:
+    - spec.acme.solvers.0.dns01.route53.accessKeyID
+    select:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: letsencrypt-staging
+      version: v1
