--- a/cert-manager/kustomization.yaml
+++ b/cert-manager/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
 - ./certificates
 replacements:
 - source:
-    fieldPath: data.SECRET_TLD
+    fieldPath: SECRET_TLD
     kind: Secret
     name: cert-manager-secrets
     version: v1
@@ -91,7 +91,7 @@ replacements:
       namespace: openshift-ingress
       version: v1
 - source:
-    fieldPath: data.SECRET_ADMIN_EMAIL
+    fieldPath: SECRET_ADMIN_EMAIL
     kind: Secret
     name: cert-manager-secrets
     version: v1
@@ -111,7 +111,7 @@ replacements:
       name: letsencrypt-staging
       version: v1
 - source:
-    fieldPath: data.AWS_REGION
+    fieldPath: AWS_REGION
     kind: Secret
     name: cert-manager-secrets
     version: v1
@@ -131,7 +131,7 @@ replacements:
       name: letsencrypt-staging
       version: v1
 - source:
-    fieldPath: data.
+    fieldPath: AWS_HOSTED_ZONE_ID
     kind: Secret
     name: cert-manager-secrets
     version: v1
@@ -151,7 +151,7 @@ replacements:
       name: letsencrypt-staging
       version: v1
 - source:
-    fieldPath: data.AWS_ACCESS_KEY_ID
+    fieldPath: AWS_ACCESS_KEY_ID
     kind: Secret
     name: cert-manager-secrets
     version: v1
