--- a/cert-manager/kustomization.yaml
+++ b/cert-manager/kustomization.yaml
@@ -8,6 +8,7 @@ replacements:
     fieldPath: SECRET_TLD
     kind: Secret
     name: cert-manager-secrets
+    namespace: cert-manager
     version: v1
   targets:
   - fieldPaths:
@@ -94,6 +95,7 @@ replacements:
     fieldPath: SECRET_ADMIN_EMAIL
     kind: Secret
     name: cert-manager-secrets
+    namespace: cert-manager
     version: v1
   targets:
   - fieldPaths:
@@ -114,6 +116,7 @@ replacements:
     fieldPath: AWS_REGION
     kind: Secret
     name: cert-manager-secrets
+    namespace: cert-manager
     version: v1
   targets:
   - fieldPaths:
@@ -134,6 +137,7 @@ replacements:
     fieldPath: AWS_HOSTED_ZONE_ID
     kind: Secret
     name: cert-manager-secrets
+    namespace: cert-manager
     version: v1
   targets:
   - fieldPaths:
@@ -154,6 +158,7 @@ replacements:
     fieldPath: AWS_ACCESS_KEY_ID
     kind: Secret
     name: cert-manager-secrets
+    namespace: cert-manager
     version: v1
   targets:
   - fieldPaths:
