--- a/cert-manager/kustomization.yaml
+++ b/cert-manager/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
 - ./issuers
 - ./certificates
-replacements:
+# replacements:
 # - source:
 #     fieldPath: SECRET_TLD
 #     kind: Secret
@@ -154,24 +154,24 @@ replacements:
 #       kind: ClusterIssuer
 #       name: letsencrypt-staging
 #       version: v1
-- source:
-    kind: Secret
-    name: cert-manager-secrets
-    namespace: cert-manager
-    version: v1
-    fieldPath: data.AWS_ACCESS_KEY_ID
-  targets:
-  - select:
-      group: cert-manager.io
-      kind: ClusterIssuer
-      name: letsencrypt-production
-      version: v1
-    fieldPaths:
-    - spec.acme.solvers.0.dns01.route53.accessKeyID
-  - select:
-      group: cert-manager.io
-      kind: ClusterIssuer
-      name: letsencrypt-staging
-      version: v1
-    fieldPaths:
-    - spec.acme.solvers.0.dns01.route53.accessKeyID
+# - source:
+#     kind: Secret
+#     name: cert-manager-secrets
+#     namespace: cert-manager
+#     version: v1
+#     fieldPath: data.AWS_ACCESS_KEY_ID
+#   targets:
+#   - select:
+#       group: cert-manager.io
+#       kind: ClusterIssuer
+#       name: letsencrypt-production
+#       version: v1
+#     fieldPaths:
+#     - spec.acme.solvers.0.dns01.route53.accessKeyID
+#   - select:
+#       group: cert-manager.io
+#       kind: ClusterIssuer
+#       name: letsencrypt-staging
+#       version: v1
+#     fieldPaths:
+#     - spec.acme.solvers.0.dns01.route53.accessKeyID
