--- a/cert-manager/certificates/apps.yaml
+++ b/cert-manager/certificates/apps.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   secretName: apps-wildcard-cert-tls
   issuerRef:
-    name: letsencrypt-staging
+    name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: apps.openshift.SECRET_TLD_PLACEHOLDER
+  commonName: apps.openshift.${SECRET_TLD}
   dnsNames: 
-    - "apps.openshift.SECRET_TLD_PLACEHOLDER"
-    - "*.apps.openshift.SECRET_TLD_PLACEHOLDER"
+    - "apps.openshift.${SECRET_TLD}"
+    - "*.apps.openshift.${SECRET_TLD}"
