--- a/cert-manager/certificates/kustomization.yaml
+++ b/cert-manager/certificates/kustomization.yaml
@@ -6,11 +6,5 @@ resources:
   - ./api.yaml
   - ./apps.yaml
 # Disabled until i know certs work
-# patches:
-#  - target:
-#       group: operator.openshift.io
-#       version: v1
-#       kind: IngressController
-#       name: default
-#       namespace: openshift-ingress-operator
-#    path: patch-apps-ingress.yaml
+#  - ./patch-apps-ingress.yaml
+  
