--- a/cert-manager/certificates/patch-apps-ingress.yaml
+++ b/cert-manager/certificates/patch-apps-ingress.yaml
@@ -1,3 +1,12 @@
-- op: replace
-  path: /spec/defaultCertificate/name
-  value: apps-wildcard-cert-tls
+---
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  annotations:
+    kustomize.toolkit.fluxcd.io/prune: disabled
+    kustomize.toolkit.fluxcd.io/ssa: merge
+  name: default
+  namespace: openshift-ingress-operator
+spec:
+  defaultCertificate:
+    name: apps-wildcard-cert-tls
