--- a/cert-manager/issuers/letsencrypt-staging.yaml
+++ b/cert-manager/issuers/letsencrypt-staging.yaml
@@ -7,18 +7,18 @@ metadata:
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: SECRET_ADMIN_EMAIL_PLACEHOLDER
+    email: ${SECRET_ADMIN_EMAIL}
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
     - selector:
         dnsZones:
-          - SECRET_TLD_PLACEHOLDER
+          - ${SECRET_TLD}
       dns01:
         route53:
-          region: AWS_REGION_PLACEHOLDER
-          hostedZoneID: AWS_HOSTED_ZONE_ID_PLACEHOLDER
-          accessKeyID: AWS_ACCESS_KEY_ID_PLACEHOLDER
+          region: ${AWS_REGION}
+          hostedZoneID: ${AWS_HOSTED_ZONE_ID}
+          accessKeyID: ${AWS_ACCESS_KEY_ID}
           secretAccessKeySecretRef:
             name: route53-access-key
             key: secretAccessKey
