--- a/cert-manager/certificates/apps.yaml
+++ b/cert-manager/certificates/apps.yaml
@@ -8,7 +8,7 @@ spec:
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: apps.openshift.${SECRET_TLD}
+  commonName: apps.openshift.$(SECRET_TLD)
   dnsNames: 
-    - "apps.openshift.${SECRET_TLD}"
-    - "*.apps.openshift.${SECRET_TLD}"
+    - "apps.openshift.$(SECRET_TLD)"
+    - "*.apps.openshift.$(SECRET_TLD)"
