--- a/cert-manager/certificates/kustomization.yaml
+++ b/cert-manager/certificates/kustomization.yaml
@@ -14,3 +14,5 @@ vars:
     name: cert-manager-secrets
     namespace: cert-manager
     apiVersion: v1
+  fieldref:
+    fieldpath: data.SECRET_TLD
