--- a/cert-manager/certificates/kustomization.yaml
+++ b/cert-manager/certificates/kustomization.yaml
@@ -10,7 +10,7 @@ replacements:
 - source:
     kind: Secret
     name: cert-manager-secrets
-    fieldPath: data.SECRET_TLD.value
+    fieldPath: data.SECRET_TLD
   targets:
   - fieldPaths:
     - spec.commonName
