--- a/charts/certificates/Chart.yaml
+++ b/charts/certificates/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v2
 description: A Helm chart to create Let's Encrypt configuration in an OpenShift cluster.
 name: certificates
-version: 0.1.0
+version: 0.1.1
 kubeVersion: ">=1.22.0-0"
 maintainers:
   - name: Magnus Ullberg
@@ -11,7 +11,7 @@ annotations:
   artifacthub.io/changes: |-
     - kind: changed
       description: |
-        Initial release.
+        Fix secret location.
 keywords:
   - certificates
   - Let's Encrypt
