--- a/charts/certificates/templates/secret.yaml
+++ b/charts/certificates/templates/secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: certificates-secret
+    namespace: cert-manager
 type: Opaque
 stringData:
     secretAccessKey: {{ .Values.aws.secret_access_key }}
