--- a/charts/certificates/templates/certificates.yaml
+++ b/charts/certificates/templates/certificates.yaml
@@ -7,8 +7,9 @@ metadata:
 spec:
   secretName: api-cert-tls
   issuerRef:
-    name: letsencrypt-production
     kind: ClusterIssuer
+    name: letsencrypt-production
+    namespace: cert-manager
   commonName: api.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   dnsNames: 
     - "api.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
@@ -22,8 +23,9 @@ metadata:
 spec:
   secretName: apps-wildcard-cert-tls
   issuerRef:
-    name: letsencrypt-production
     kind: ClusterIssuer
+    name: letsencrypt-production
+    namespace: cert-manager
   commonName: "apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
   dnsNames: 
     - "apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
