--- a/charts/certificates/values.yaml
+++ b/charts/certificates/values.yaml
@@ -11,4 +11,4 @@ aws:
   region: YOUR_REGION
   hosted_zone_id: YOUR_HOSTED_ZONE_ID
   access_key_id: YOUR_ACCESS_KEY_ID
-  access_key_secret: YOUR_SECRET_ACCESS_KEY
+  secret_access_key: YOUR_SECRET_ACCESS_KEY
