--- a/charts/certificates/templates/certificates.yaml
+++ b/charts/certificates/templates/certificates.yaml
@@ -8,7 +8,7 @@ spec:
   secretName: api-cert-tls
   issuerRef:
     kind: ClusterIssuer
-    name: letsencrypt-production
+    name: letsencrypt-{{ .Values.issuer }}
   commonName: api.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   dnsNames: 
     - "api.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
@@ -23,7 +23,7 @@ spec:
   secretName: apps-wildcard-cert-tls
   issuerRef:
     kind: ClusterIssuer
-    name: letsencrypt-production
+    name: letsencrypt-{{ .Values.issuer }}
   commonName: "apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
   dnsNames: 
     - "apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
