--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,18 +1,9 @@
 ---
 apiVersion: v2
-description: A Helm chart to configure the cluster.
-name: certificates
+description: A Helm chart to bootstrap the cluster.
+name: bootstrap
 version: 0.1.0
 kubeVersion: ">=1.22.0-0"
 maintainers:
   - name: Magnus Ullberg
     email: magnus@ullberg.us
-annotations:
-  artifacthub.io/changes: |-
-    - kind: changed
-      description: |
-        Initial release.
-dependencies:
-- name: certificates
-  version: 0.1.3
-  repository: file://charts/certificates
