--- a/templates/cluster-certificates.yaml
+++ b/templates/cluster-certificates.yaml
@@ -24,12 +24,12 @@ spec:
         - name: cluster.admin_email
           value: {{ .Values.cluster.admin_email }}
         - name: issuer
-          value: {{ .Values.issuer }}
+          value: {{ .Values.certificates.issuer }}
         - name: aws.region
-          value: {{ .Values.aws.region }}
+          value: {{ .Values.certificates.aws.region }}
         - name: aws.hosted_zone_id
-          value: {{ .Values.aws.hosted_zone_id }}
+          value: {{ .Values.certificates.aws.hosted_zone_id }}
         - name: aws.access_key_id
-          value: {{ .Values.aws.access_key_id }}
+          value: {{ .Values.certificates.aws.access_key_id }}
         - name: aws.secret_access_key
-          value: {{ .Values.aws.secret_access_key }}
+          value: {{ .Values.certificates.aws.secret_access_key }}
