--- a/deploy/dev/templates/cluster-certificates.yaml
+++ b/deploy/dev/templates/cluster-certificates.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
+    namespace: openshift-gitops
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
