--- a/charts/certificates/templates/certificates.yaml
+++ b/charts/certificates/templates/certificates.yaml
@@ -9,10 +9,9 @@ spec:
   issuerRef:
     kind: ClusterIssuer
     name: letsencrypt-{{ .Values.issuer }}
-  commonName: api.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  commonName: "api.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
   dnsNames: 
     - "api.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
-    - "api-int.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
