--- a/charts/democratic-csi/values.yaml
+++ b/charts/democratic-csi/values.yaml
@@ -1,133 +1,145 @@
-csiDriver:
-  # should be globally unique for a given cluster
-  name: "org.democratic-csi.iscsi-synology"
+democratic-csi:
+  node:
+    rbac:
+      openshift:
+        privileged: true
+    driver:
+      localtimeHostPath: false
+  controller:
+    rbac:
+      openshift:
+        privileged: true
 
-# add note here about volume expansion requirements
-storageClasses:
-  - name: synology-iscsi
-    defaultClass: true
-    reclaimPolicy: Delete
-    volumeBindingMode: Immediate
-    allowVolumeExpansion: true
-    parameters:
-      # for block-based storage can be ext3, ext4, xfs
-      # for nfs should be nfs
-      fsType: ext4
+  csiDriver:
+    # should be globally unique for a given cluster
+    name: "org.democratic-csi.iscsi-synology"
 
-    mountOptions: []
-    secrets:
-      provisioner-secret:
-      controller-publish-secret:
-      node-stage-secret:
-      node-publish-secret:
-      controller-expand-secret:
+  # add note here about volume expansion requirements
+  storageClasses:
+    - name: synology-iscsi
+      defaultClass: true
+      reclaimPolicy: Delete
+      volumeBindingMode: Immediate
+      allowVolumeExpansion: true
+      parameters:
+        # for block-based storage can be ext3, ext4, xfs
+        # for nfs should be nfs
+        fsType: ext4
 
-volumeSnapshotClasses:
-  - name: synology-iscsi
-    parameters:
-    secrets:
-      snapshotter-secret:
+      mountOptions: []
+      secrets:
+        provisioner-secret:
+        controller-publish-secret:
+        node-stage-secret:
+        node-publish-secret:
+        controller-expand-secret:
 
-controller:
-  externalResizer:
-    enabled: true
+  volumeSnapshotClasses:
+    - name: synology-iscsi
+      parameters:
+      secrets:
+        snapshotter-secret:
 
-  externalSnapshotter:
-    enabled: true
+  controller:
+    externalResizer:
+      enabled: true
 
-driver:
-  config:
-    driver: synology-iscsi
-    httpConnection:
-      protocol: http
-      host: server address
-      port: 5000
-      username: admin
-      password: password
-      allowInsecure: true
-      # should be uniqe across all installs to the same nas
-      session: "openshift-1-democratic-csi"
-      serialize: true
+    externalSnapshotter:
+      enabled: true
 
-    # Choose the DSM volume this driver operates on. The default value is /volume1.
-    # synology:
-    #   volume: /volume1
+  driver:
+    config:
+      driver: synology-iscsi
+      httpConnection:
+        protocol: http
+        host: server address
+        port: 5000
+        username: admin
+        password: password
+        allowInsecure: true
+        # should be uniqe across all installs to the same nas
+        session: "openshift-1-democratic-csi"
+        serialize: true
 
-    iscsi:
-      targetPortal: "server[:port]"
-      # for multipath
-      targetPortals: [] # [ "server[:port]", "server[:port]", ... ]
-      # leave empty to omit usage of -I with iscsiadm
-      interface: ""
-      # can be whatever you would like
-      baseiqn: "iqn.2000-01.com.synology:csi."
+      # Choose the DSM volume this driver operates on. The default value is /volume1.
+      # synology:
+      #   volume: /volume1
 
-      # MUST ensure uniqueness
-      # full iqn limit is 223 bytes, plan accordingly
-      namePrefix: "openshift-1-"
-      nameSuffix: ""
+      iscsi:
+        targetPortal: "server[:port]"
+        # for multipath
+        targetPortals: [] # [ "server[:port]", "server[:port]", ... ]
+        # leave empty to omit usage of -I with iscsiadm
+        interface: ""
+        # can be whatever you would like
+        baseiqn: "iqn.2000-01.com.synology:csi."
 
-      # documented below are several blocks
-      # pick the option appropriate for you based on what your backing fs is and desired features
-      # you do not need to alter dev_attribs under normal circumstances but they may be altered in advanced use-cases
-      # These options can also be configured per storage-class:
-      # See https://github.com/democratic-csi/democratic-csi/blob/master/docs/storage-class-parameters.md
-      lunTemplate:
-        # can be static value or handlebars template
-        description: "{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}-{{ parameters.[csi.storage.k8s.io/pvc/name] }}"
-        
-        # btrfs thin provisioning
-        type: "BLUN"
-        # tpws = Hardware-assisted zeroing
-        # caw = Hardware-assisted locking
-        # 3pc = Hardware-assisted data transfer
-        # tpu = Space reclamation
-        # can_snapshot = Snapshot
-        #dev_attribs:
-        #- dev_attrib: emulate_tpws
-        #  enable: 1
-        #- dev_attrib: emulate_caw
-        #  enable: 1
-        #- dev_attrib: emulate_3pc
-        #  enable: 1
-        #- dev_attrib: emulate_tpu
-        #  enable: 0
-        #- dev_attrib: can_snapshot
-        #  enable: 1
+        # MUST ensure uniqueness
+        # full iqn limit is 223 bytes, plan accordingly
+        namePrefix: "openshift-1-"
+        nameSuffix: ""
 
-        # btfs thick provisioning
-        # only zeroing and locking supported
-        #type: "BLUN_THICK"
-        # tpws = Hardware-assisted zeroing
-        # caw = Hardware-assisted locking
-        #dev_attribs:
-        #- dev_attrib: emulate_tpws
-        #  enable: 1
-        #- dev_attrib: emulate_caw
-        #  enable: 1
+        # documented below are several blocks
+        # pick the option appropriate for you based on what your backing fs is and desired features
+        # you do not need to alter dev_attribs under normal circumstances but they may be altered in advanced use-cases
+        # These options can also be configured per storage-class:
+        # See https://github.com/democratic-csi/democratic-csi/blob/master/docs/storage-class-parameters.md
+        lunTemplate:
+          # can be static value or handlebars template
+          description: "{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}-{{ parameters.[csi.storage.k8s.io/pvc/name] }}"
+          
+          # btrfs thin provisioning
+          type: "BLUN"
+          # tpws = Hardware-assisted zeroing
+          # caw = Hardware-assisted locking
+          # 3pc = Hardware-assisted data transfer
+          # tpu = Space reclamation
+          # can_snapshot = Snapshot
+          #dev_attribs:
+          #- dev_attrib: emulate_tpws
+          #  enable: 1
+          #- dev_attrib: emulate_caw
+          #  enable: 1
+          #- dev_attrib: emulate_3pc
+          #  enable: 1
+          #- dev_attrib: emulate_tpu
+          #  enable: 0
+          #- dev_attrib: can_snapshot
+          #  enable: 1
 
-        # ext4 thinn provisioning UI sends everything with enabled=0
-        #type: "THIN"
+          # btfs thick provisioning
+          # only zeroing and locking supported
+          #type: "BLUN_THICK"
+          # tpws = Hardware-assisted zeroing
+          # caw = Hardware-assisted locking
+          #dev_attribs:
+          #- dev_attrib: emulate_tpws
+          #  enable: 1
+          #- dev_attrib: emulate_caw
+          #  enable: 1
 
-        # ext4 thin with advanced legacy features set
-        # can only alter tpu (all others are set as enabled=1)
-        #type: "ADV"
-        #dev_attribs:
-        #- dev_attrib: emulate_tpu
-        #  enable: 1
+          # ext4 thinn provisioning UI sends everything with enabled=0
+          #type: "THIN"
 
-        # ext4 thick
-        # can only alter caw
-        #type: "FILE"
-        #dev_attribs:
-        #- dev_attrib: emulate_caw
-        #  enable: 1
+          # ext4 thin with advanced legacy features set
+          # can only alter tpu (all others are set as enabled=1)
+          #type: "ADV"
+          #dev_attribs:
+          #- dev_attrib: emulate_tpu
+          #  enable: 1
 
-      lunSnapshotTemplate:
-        is_locked: true
-        # https://kb.synology.com/en-me/DSM/tutorial/What_is_file_system_consistent_snapshot
-        is_app_consistent: true
+          # ext4 thick
+          # can only alter caw
+          #type: "FILE"
+          #dev_attribs:
+          #- dev_attrib: emulate_caw
+          #  enable: 1
 
-      targetTemplate:
-        auth_type: 0
-        max_sessions: 0
+        lunSnapshotTemplate:
+          is_locked: true
+          # https://kb.synology.com/en-me/DSM/tutorial/What_is_file_system_consistent_snapshot
+          is_app_consistent: true
+
+        targetTemplate:
+          auth_type: 0
+          max_sessions: 0
