enable self-heal

--- a/deploy/dev/templates/cluster-democratic-csi.yaml
+++ b/deploy/dev/templates/cluster-democratic-csi.yaml
@@ -25,5 +25,7 @@ spec:
         - name: democratic-csi.driver.config.iscsi.targetPortal
           value: {{ index .Values "democratic-csi" "driver" "config" "iscsi" "targetPortal" }}
   syncPolicy:
+    automated:
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
