--- a/deploy/dev/templates/cluster-certificates.yaml
+++ b/deploy/dev/templates/cluster-certificates.yaml
@@ -32,3 +32,6 @@ spec:
           value: {{ .Values.certificates.aws.access_key_id }}
         - name: aws.secret_access_key
           value: {{ .Values.certificates.aws.secret_access_key }}
+  syncPolicy:
+    automated:
+      selfHeal: true
